Modules/sg-module/sg.tf
# create aws security group for the application with default rules
resource "aws_security_group" "app_sg" {
  name        = var.sg_name
  description = "Security group for the application"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
}

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
